k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-node-api
  namespace: devops-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-node-api
  template:
    metadata:
      labels:
        app: devops-node-api
    spec:
      containers:
        - name: devops-node-api
          image: harbor.asthrahealthtech.com/devops-sandbox/devops-node-api:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: devops-node-api-pvc
