k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-node-api-service
spec:
  type: ClusterIP
  selector:
    app: devops-node-api
  ports:
    - port: 80
      targetPort: 3000
