k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-node-api-ingress
  namespace: devops-sandbox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-asthrahealthtech
spec:
  rules:
    - host: hasal-devops-node-api.internal.asthrahealthtech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-node-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - hasal-devops-node-api.internal.asthrahealthtech.com
      secretName: devops-node-api-tls
